DeveloperOrg/force-app/main/default/objects/Training_Event__c/Training_Event__c.object-meta.xml
<CustomObject>
    <label>Training Event</label>
    <nameField>
        <label>TrainingEvent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Event</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>