DeveloperOrg/force-app/main/default/objects/Training_Event__c/fields/Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity__c</fullName>
    <label>Max Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>