DeveloperOrg/force-app/main/default/objects/Training_Event__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Event</relationshipName>
    <type>Lookup</type>
</CustomField>