DeveloperOrg/force-app/main/default/objects/Training_Event__c/recordTypes/Client_Training.recordType-meta.xml
<RecordType>
    <fullName>Client_Training</fullName>
    <active>true</active>
    <label>Client Training</label>
</RecordType>