DeveloperOrg/force-app/main/default/objects/Training_Event__c/recordTypes/Internal_Training.recordType-meta.xml
<RecordType>
    <fullName>Internal_Training</fullName>
    <active>true</active>
    <label>Internal Training</label>
</RecordType>