DeveloperOrg/force-app/main/default/objects/Training_Event__c/validationRules/currency.validationRule-meta.xml
<ValidationRule>
    <fullName>currency</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(ISPICKVAL( country__c , &quot;India&quot;),
    Max_Capacity__c &lt; 1000
 ) ,

 AND(ISPICKVAL( country__c , &quot;USA&quot;),
   Max_Capacity__c   &gt; 5000
),

  AND(ISPICKVAL( country__c , &quot;UK&quot;),
   Max_Capacity__c   &lt;&gt; 10000
 ))</errorConditionFormula>
    <errorDisplayField>Max_Capacity__c</errorDisplayField>
    <errorMessage>Max_Capacity__c</errorMessage>
</ValidationRule>